@@ -256,16 +256,6 @@ if($_SESSION['worklevel']>-1){
 	<input type="hidden" name="bid" value="<?php print $bid[0]; ?>" />
 	</form>
   </div>
-
-  <div class="hidden" id="add-merit">
-		<div style="float:right;" title="<?php print_string('tracking','markbook');?>" 
-			name="current" value="student_grades_print.php" 
-			onclick="clickToPresentSid('student_grades_print','tracking_student')" >
-		<img class="clicktochart" />
-		</div>
-		<div style="float:right;" title="<?php print_string('merits','infobook');?>" 
-			name="current" value="merit_adder.php" 
-			onclick="clickToAddMerit('<?php print $bid[0];?>','<?php print $pid;?>','merit')" >
-		<img class="clicktoaddmerit" />
-		</div>
-  </div>
+<?php
+include('scripts/studentlist_extra.php');
+?>
