@@ -378,14 +378,3 @@ if($nodays==1 or $_SESSION['role']=='office' or $_SESSION['role']=='admin'){
 	</session>
   </div>
 
-  <div class="hidden" id="add-merit">
-		<div style="float:right;" title="<?php print_string('tracking','markbook');?>" 
-			name="current" value="student_grades_print.php" 
-			onclick="clickToPresentSid('student_grades_print','tracking_student')" >
-		<img class="clicktochart" />
-		</div>
-		<div style="float:right;" title="<?php print_string('merits','infobook');?>" 
-			name="current" value="merit_adder.php" onclick="clickToAddMerit('','','merit')" >
-		<img class="clicktoaddmerit" />
-		</div>
-  </div>
