@@ -9,6 +9,7 @@ InfoBook.
 Make login to eportfolio in hidden iframe suitable for access to
 student report archive.
 
+Moved the studentlist table row extra div out to an include.
 
 
 Version ClaSS-0.9.24 release (2010/8/25)
